plugins {
    id 'groovy'
    id 'java'
    id 'idea'
    id 'groovy-gradle-plugin'
}

/*
java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(11)
    }
}*/

sourceCompatibility = '11'
targetCompatibility = '11'

idea {
    project {
        jdkName = '11'
        languageLevel = '11'
    }
}

sourceSets {
    compat { }
}

repositories {
    mavenCentral()
    maven {
        url "https://plugins.gradle.org/m2/"
    }
}

dependencies {

    compile('de.esoco.gwt:gwt-gradle-plugin:1.1.1') {
        exclude group: 'org.codehaus.groovy'
    }

    compile 'com.bmuschko:gradle-docker-plugin:6.7.0'

    compile('com.netflix.nebula:gradle-ospackage-plugin:8.3.0')

    compile "gradle.plugin.com.jetbrains.python:gradle-python-envs:0.0.30"

    runtime sourceSets.compat.output
}

compileCompatJava.options.compilerArgs.addAll(
        ['--add-exports', 'jdk.javadoc/jdk.javadoc.internal.tool=ALL-UNNAMED'])

tasks.named('jar', Jar).configure {
    Jar jar ->
        jar.preserveFileTimestamps = false
        jar.reproducibleFileOrder = true
        jar.outputs.cacheIf { true }
}
